Fixed layout issues

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,5 +1,5 @@
 .layout{
-    width: 100%;
+    width: 95vw;
     height: auto;
     margin-top: var(--nav-bar-height);
 }
